<resources>
    <string name="app_name">QuizTrivial</string>

    <string name="BTMLOGIN">LOGIN</string>
    <string name="BTMREGISTRO">REGISTRE</string>
    <string name="correoEt">E-mail</string>
    <string name="nombreEt">Nom</string>
    <string name="passEt">Password</string>
    <string name="fechaTxt">Data</string>
    <string name="Registrar">REGISTRAR</string>
    <string name="edatEt">Edat</string>
    <string name="poblacioEt">Població</string>

    <string name="correoLogin">E-mail</string>
    <string name="passLogin">Password</string>
    <string name="BtnLogin">ENTRAR</string>
    <string name="tancarSessio">Tancar Sessió</string>

    <string name="miPuntuaciotxt">Puntuació</string>
    <string name="puntuacio"> -- </string>
    <string name="uid"> -- </string>
    <string name="correo"> -- </string>
    <string name="nom"> -- </string>
    <string name="MenuTxt">MENÚ</string>
    <string name="jugarBtn">Jugar</string>
    <string name="editarBtn">Canviar Imatge</string>
    <string name="PuntuacionsBtn">Puntuacions</string>
    <string name="CreditsBtn">Crèdits</string>
    <string name="edat"> -- </string>
    <string name="poblacio"> -- </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>