<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fons"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">
        <!-- IMATGE -->
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/jugador"
            android:src="@drawable/gokussjblue"/>
        <!-- ENTREM EL MAIL -->
        <EditText
            android:id="@+id/correoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:minHeight="48dp"
            android:inputType="textEmailAddress"
            android:hint="@string/correoEt" />
        <!-- forcem que la entrada sigui un correu electronic -->

        <!-- ENTREM EL PASSWORD -->
        <EditText
            android:id="@+id/passEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:minHeight="48dp"
            android:inputType="textPassword"
            android:hint="@string/passEt" />
        <!-- forcem que la entrada sigui un password -->


        <!-- ENTREM EL NOM DEL JUGADOR -->
        <EditText
            android:id="@+id/nombreEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:minHeight="48dp"
            android:hint="@string/nombreEt" />
        <!-- ENTREM L'edat -->
        <EditText
            android:id="@+id/edatEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/edatEt" />
        <!-- ENTREM LA POBLACIO -->
        <EditText
            android:id="@+id/poblacioEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/poblacioEt" />


        <!-- DATA ACTUAL -->
        <TextView
            android:id="@+id/fechaEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:gravity="center"
            android:hint="@string/fechaTxt"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            />

        <!-- BOTO DE ENTRAR -->
        <Button
            android:id="@+id/Registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Registrar" />
    </LinearLayout>
</RelativeLayout>
